force-app/main/default/objects/ExpenseCard__c/ExpenseCard__c.object-meta.xml
<CustomObject>
    <label>ExpenseCard</label>
    <nameField>
        <label>ExpenseCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpenseCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>