force-app/main/default/objects/ExpenseCard__c/fields/CardDate__c.field-meta.xml
<CustomField>
    <fullName>CardDate__c</fullName>
    <label>CardDate</label>
    <type>Date</type>
</CustomField>