force-app/main/default/objects/ExpenseCard__c/fields/CardKeeper__c.field-meta.xml
<CustomField>
    <fullName>CardKeeper__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CardKeeper</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ExpenseCards</relationshipLabel>
    <relationshipName>Expence_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>