force-app/main/default/objects/ExpenseCard__c/fields/MonthlyExpense__c.field-meta.xml
<CustomField>
    <fullName>MonthlyExpense__c</fullName>
    <label>MonthlyExpense</label>
    <referenceTo>MonthlyExpense__c</referenceTo>
    <relationshipLabel>ExpenseCards</relationshipLabel>
    <relationshipName>Expence_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>